RF: AT_03.005.04, AT_03.005.05, AT_03.005.06 - change to POM - Pipeline Configuration > Advanced and add dependsOnMethods to tests